--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.17.1",
+    "axios": "^0.21.4",
     "classnames": "^2.3.1",
     "faunadb": "^4.4.1",
     "next": "11.1.2",
