--- a/.env.local.example
+++ b/.env.local.example
@@ -1,1 +1,16 @@
+# Stripe
 STRIPE_API_KEY=
+NEXT_PUBLIC_STRIPE_PUBLIC_KEY=
+STRIPE_SUCCESS_URL=
+STRIPE_CANCEL_URL=
+
+# Github
+GITHUB_ID=
+GITHUB_SECRET=
+
+# FaunaDB
+FAUNADB_KEY=
+
+# Next Auth
+JWT_SIGNING_PRIVATE_KEY=
+NEXTAUTH_URL=
