--- a/package.json
+++ b/package.json
@@ -21,11 +21,17 @@
     "stripe": "^8.174.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.6.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.1",
     "@types/next-auth": "^3.15.0",
     "@types/node": "^16.9.1",
     "@types/react": "^17.0.20",
+    "babel-jest": "^27.2.2",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "jest": "^27.2.2",
+    "jest-dom": "^4.0.0",
     "node-sass": "^5.0.0",
     "typescript": "^4.4.2"
   }
