--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:unit": "jest"
   },
   "dependencies": {
     "@stripe/stripe-js": "^1.17.1",
@@ -27,9 +28,10 @@
     "@types/next-auth": "^3.15.0",
     "@types/node": "^16.9.1",
     "@types/react": "^17.0.20",
-    "babel-jest": "^27.2.2",
+    "babel-jest": "^27.2.3",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.2.2",
     "jest-dom": "^4.0.0",
     "node-sass": "^5.0.0",
