--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jest": "^27.2.2",
     "jest-dom": "^4.0.0",
     "node-sass": "^5.0.0",
+    "ts-jest": "^27.0.5",
     "typescript": "^4.4.2"
   }
 }
